--- a/_posts/2015-05-14-Facebook-声称用户能够看到更多样性的内容，果真如此？.md
+++ b/_posts/2015-05-14-Facebook-声称用户能够看到更多样性的内容，果真如此？.md
@@ -13,13 +13,13 @@ title: Facebook 声称用户能够看到更多样性的内容，果真如此？
 
 问题还没完。百分之九的用户在 Facebook 上表明政治立场。这听上去就很 WTF 不是吗？可以安全地假定，这一小部分人，肯定自身对公共事务就有较大的兴趣，足够的知识和能力，以及（自以为）鲜明的立场。一个推论是，他们应该都受过良好的教育，家庭背景、经济条件等也不会太差。再一个假定，这良好的教育肯定包括批判性思维。那么是否可以认为，这部分人本来就更倾向于能够接受不同的观点？Facebook 和严肃新闻听上去水火不容，但这部分人应该更倾向于有这样的能力：即使是在 Facebook 这样一种正常情况下不应该唤起所有注意力的媒介里，他们的大脑也能本能地捕捉到与既有观点不符的内容，并能够不太费力地对其进行处理。
 
-我们继续看这个调查。用数据点（从 -2 到 2 ，五个整数）标定了严肃内容的取向，一般来说都会倾向某一端，很少有中立的。
+我们继续看这个调查。用数据点（从 -2 到 2 ，五个整数）标定了严肃内容的取向，大部分都会倾向某一端，很少有中立的。
 这 9% 的用户平均有 23% 的好友是另一个立场（下称「『异端』好友」）的。有一半的用户的「异端」好友处在 9% 到 33% 的区间里，这个区间外两端各有 25% 的用户。
 在考虑到 Facebook 依据相关性（天知道他们怎么算的……这里就不使用运营驱动的阴谋论了，姑且假设他们真的是想清洗内容）对信息流进行排序以后，得出「自由」派用户好友分享的信息（这里没提是不是「异端」）约有 23% 是「不同立场」（“cross-cutting”）的，而新闻流里这个数据是 22%。由此计算出 8% 的「风险比例」（“risk ratio”），意思是这些用户有 8% 更少的几率看到朋友们已经分享过的「不同立场」内容。（我很少用 Facebook，不太确定这里到底是什么意思）「保守」派这边的数据分别是：分享中占 34%，新闻流里占 33%，计算出 5% 的风险比例。（所以，「保守」派比「自由」派更「自由」？）
 更进一步，「自由」派用户真正点开看的内容，只有 20% 是「不同立场」的，这比起新闻流里又有 6% 的……损耗？误差？「保守」派这边是 29%，有 17% 的风险比例。
 
 > 如果你还没注意到的话：报告中所有的立场描述我都加了引号、附了原文，请不要按第一印象理解它们。
 
-这些是比较干的数据，如何解释它们还有待统计学者、政治学者、产品经理详细分析；但我觉得它的意义并不是那么显著，原因如之前所述，它们的选择偏差实在太明显。而且如何确保出来的不是「全球变暖导致海盗减少」这种结论？但 Facebook 直接大笔一挥：「我们的服务增加了用户接受内容的多样性。」我几乎能隔着屏幕和网线听到打下这句话的人内心呼喊的 “Yikes!”
+这些是比较干的数据，如何解释它们还有待统计学者、政治学者、产品经理详细分析；但它的意义并不是那么显著，原因如之前所述，它们的选择偏差实在太明显。而且如何确保出来的不是「全球变暖导致海盗减少」这种结论？但 Facebook 直接大笔一挥：「我们的服务增加了用户接受内容的多样性。」我几乎能隔着屏幕和网线，听到打下这句话的人内心呼喊的 “Yikes!”
 
->HHKB 极大地增加了我码字的欲望和流畅度……当你有一块如此出色的键盘和相符的快捷键，并开始攀爬那陡峭的学习曲线，世界因此而美丽。
+> HHKB 极大地增加了我码字的欲望和流畅度……当你有一块如此出色的键盘和相符的快捷键，并开始攀爬那陡峭的学习曲线，世界因此而美丽。
